2007-02-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: added hints to the dialog.

2007-02-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/screenshot.c: for shaped windows, add an alpha
	channel and erase pixels outside the shape.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* app/actions/plug-in-actions.c
	* app/plug-in/gimppluginprocedure.[ch]: added utility function to
	retrieve the translated blurb of a plug-in procedure. Make sure
	that gettext isn't called with the empty string.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpstatusbar.c: when multi-line strings end up
	being passed to the statusbar, only show the first line.

2007-02-14  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff.c: added CCITT Group 3 and 4 compression
	schemes to TIFF save plug-in. These modes are selectable for
	indexed image with a b/w colormap only. Fixes bug #162119 with the
	help of Manfred Joerg.

2007-02-13  Raphaël Quinet  <raphael@gimp.org>

	* modules/gimpinputdevicestore.c (gimp_input_device_store_new):
	fix function prototype for when libhal is not available.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-convert.c: update the progress less often.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.[ch]
	* modules/controller_linux_input.c: improved error handling.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/gimpinputdevicestore.c: keep devices sorted alphabetically.

2007-02-13  Michael Natterer  <mitch@gimp.org>

	* modules/gimpinputdevicestore.[ch]: made dynamically loadable
	using GTypeModule.

	* modules/controller_linux_input.c (gimp_module_register):
	register the new dynamic type.

2007-02-13  Sven Neumann  <sven@gimp.org>

	* modules/controller_linux_input.c (key_events): corrected string
	(bug #407214).

2007-02-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerlist.c (gimp_controller_list_edit_clicked):