@@ -1,3 +1,8 @@
+2007-02-16  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/lcms.c: added a button icon and fixed use of
+	gtk_vbox_new().
+
 2007-02-15  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/screenshot.c: added hints to the dialog.
